--- a/Projeto_java/style.css
+++ b/Projeto_java/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: black;
+    background-color: rgb(202, 92, 92);
     width: 100%;
     height: 100vh;
     display: flex;
@@ -38,7 +38,7 @@ body{
 }
 .button-action{
     height: 40px;
-    background: #3eb72B;
+    background: #7fcb75;
     border: 0;
     border-radius: 8px;
     cursor: pointer;
@@ -91,7 +91,7 @@ body{
 .hide{
     display: none;
 }
-.container-password:hover  .tooltip{
+.container-password:hover .tooltip{
     visibility: visible;
     bottom: 50px;
     opacity: 1;
